@@ -1,0 +1,34 @@
+name: Rainstorm release / Use Nimbus (Bot) in Git
+description: Sets the user identity in Git to be Nimbus (Bot) and installs an SSH key for signing commits and tags.
+author: Steffen Diswal
+
+inputs:
+  bot-nimbus-ssh-public-key:
+    description: The public key of the SSH key pair for Nimbus (Bot) used for signing commits and tags.
+    required: true
+  bot-nimbus-ssh-the-private-key:
+    description: The private keyof the SSH key pair for Nimbus (Bot) used for signing commits and tags. It is stored temporarily on the GitHub Actions runner in `~/.ssh/id_ed25519`.
+    required: true
+  ssh-key-fingerprints-github:
+    description: The SSH key fingerprints of GitHub. See https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/githubs-ssh-key-fingerprints.
+    required: true
+
+runs:
+  using: composite
+  steps:
+    - name: Configure the user identity in Git
+      run: |
+        git config user.email "146315497+rainstormybot-nimbus@users.noreply.github.com"
+        git config user.name "Nimbus (Bot)"
+        git config user.signingkey "$BOT_NIMBUS_SSH_PUBLIC_KEY"
+        git config gpg.format "ssh"
+        git config commit.gpgsign "true"
+        git config tag.gpgsign "true"
+      env:
+        BOT_NIMBUS_SSH_PUBLIC_KEY: ${{ inputs.bot-nimbus-ssh-public-key }}
+      shell: bash
+    - name: Install the signing key
+      uses: rainstormy/github-action-install-ssh-key@v1 # https://github.com/rainstormy/github-action-install-ssh-key
+      with:
+        known-hosts: ${{ inputs.ssh-key-fingerprints-github }}
+        private-key: ${{ inputs.bot-nimbus-ssh-the-private-key }}
